# savoia

./: .gitignore  README.md  license.txt  setup.cfg  setup.py
src/savoia/backtest/: backtest.py
src/savoia/config/: decimal_config.py  dir_config.py  logging.json
src/savoia/datafeed/: datafeed.py  ticker.py
src/savoia/engine/: engine.py
src/savoia/event/: event.py
src/savoia/execution/: execution.py
src/savoia/feed/: price.py
src/savoia/performance/: performance.py
src/savoia/portfolio/: portfolio.py  position.py  trade.py
src/savoia/result/: result.py
src/savoia/strategy/: strategy.py
src/savoia/ticker/: ticker.py
src/savoia/types/: types.py
tests/backtest/: backtest_test.py
tests/config/: decimal_config_test.py
tests/datafeed/: GBPUSD_20140101.csv  GBPUSD_20140102.csv  USDJPY_20140101.csv  USDJPY_20140102.csv  datafeed_test.py  expected_frame_20140101.csv  expected_frame_20140102.csv
tests/engine/: engine_test.py
tests/event/: event_test.py
tests/execution/: execution_test.py
tests/feed/: expected_frame_20140102.csv  price_test.py
tests/portfolio/: _position_test.py  portfolio_JPY_test.py  portfolio_test copy.py  portfolio_test.py  position_JPY_test.py  position_test.py  trade_test.py
tests/result/: result_test.py
tests/ticker/: ticker_test.py
