# metadataセクションではパッケージのメタデータを定義する
# これらの値はpypiで公開した際に表示される。
# なおversion等、一部のキーはディレクティブの指定により外部ファイルから値を取得することができる
# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name = savoia
version = 0.1.0
license_files = file:license.txt
platforms = Linux
author = ma-r-co

# optionsセクションではパッケージの依存関係やpip installした時の動作を定義する
# 値が複数ある場合、インデントすることで1行に1つの値を書くことができる。
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
[options]
zip_safe = False
include_package_data = True
package_dir =
 =src
packages = find:
scripts =
    src/bin/run_backtest
install_requires =
    numpy>=1.18.5
    pandas>=1.0.5

[options.packages.find]
where=src


# # optionの内、値のTypeがsectionのものは別セクションで記述する。
[options.extras_require]
dev =
    pytest >= 5.4.3
    mypy

# [options.entry_points]
# console_scripts =
#     foo = package_name.module_name:func_name
#     foo_dev = package_name.module_name:func_name [develop]
# gui_scripts =
#     bar = gui_package_name.gui_module_name:gui_func_name


[tool:pytest]
testpaths = tests
minversion = 5.4.3
addopts = -rsxX -vv -l --tb=short

[mypy]
ignore_missing_imports=1
disallow_untyped_calls=1
disallow_untyped_defs=1
disallow_incomplete_defs=1
disallow_any_generics=1
allow_untyped_decorators=1
no_implicit_optional=1
files = src/savoia/*, tests/*